# one-shot-cli-agent

./: AGENTS.md  Cargo.toml  README.md
analyses/: conversations_architecture.md  conversations_architecture_2.md  tool_loop_analysis.md
plans/: plan_system_prompt_override.md  plan_web_search_tool.md
scripts/: bundle_linux.sh  bundle_osx.sh  bundle_win.sh
src/: main.rs  persona.rs
src/provider/: anthropic.rs  mod.rs  openai.rs
src/session/: mod.rs
src/tools/: bash.rs  edit_file.rs  file_search.rs  finish.rs  mod.rs  url_fetch.rs  web_search.rs  web_search_ddg.rs
wrappers/: claude  codex
