[package]
name = "codeagent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
async-openai = "0.23"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5.0"
colored = "2"
dialoguer = "0.11"
indicatif = "0.17"
futures = "0.3"
glob = "0.3"
